quick-start-app/overlays/uat/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: quick-start-route-uat
